@@ -217,6 +217,7 @@ $wgAutoloadLocalClasses = array(
 	'ApiBase' => 'includes/api/ApiBase.php',
 	'ApiBlock' => 'includes/api/ApiBlock.php',
 	'ApiDelete' => 'includes/api/ApiDelete.php',
+	'ApiDisabled' => 'includes/api/ApiDisabled.php',
 	'ApiEditPage' => 'includes/api/ApiEditPage.php',
 	'ApiEmailUser' => 'includes/api/ApiEmailUser.php',
 	'ApiExpandTemplates' => 'includes/api/ApiExpandTemplates.php',
@@ -257,6 +258,7 @@ $wgAutoloadLocalClasses = array(
 	'ApiQueryCategoryMembers' => 'includes/api/ApiQueryCategoryMembers.php',
 	'ApiQueryContributions' => 'includes/api/ApiQueryUserContributions.php',
 	'ApiQueryDeletedrevs' => 'includes/api/ApiQueryDeletedrevs.php',
+	'ApiQueryDisabled' => 'includes/api/ApiQueryDisabled.php',
 	'ApiQueryExtLinksUsage' => 'includes/api/ApiQueryExtLinksUsage.php',
 	'ApiQueryExternalLinks' => 'includes/api/ApiQueryExternalLinks.php',
 	'ApiQueryGeneratorBase' => 'includes/api/ApiQueryBase.php',
